fix sonarqube scan with Java 16